--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2244,3 +2244,50 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     background-color: #506def!important;
     color: #fff!important;
 }
+
+.layui-form-checked span, .layui-form-checked:hover span {
+    background-color: #506def;
+}
+
+.layui-form-checked i, .layui-form-checked:hover i {
+    color: #506def;
+    border: 1px solid #506def;
+}
+
+.yty-checkbox{
+    
+}
+
+.yty-checkbox li{
+    float: left;
+    border: 1px solid #dcdcdc;
+    margin-left: 10px;
+    padding: 2px 10px 0px 10px;
+    border-radius: 2px;
+    cursor: pointer;
+}
+
+.yty-checkbox li span{
+    display: inline-block;
+    height: 22px;
+    width: 24px;
+    background: url(./images/ytyBack.png) no-repeat -35px -262px;
+}
+.yty-checkbox li:nth-child(1){
+    margin-left: 0px;
+}
+.red_flag{
+    background-position: -35px -262px !important;
+}
+.yellow_flag{
+    background-position: -63px -262px !important;
+}
+.cyan_flag{
+    background-position: -91px -262px !important;
+}
+.blue_flag{
+    background-position: -116px -262px !important;
+}
+.purple_flag{
+    background-position: -141px -262px !important;
+}
