--- a/application/admin/view/order/index.html
+++ b/application/admin/view/order/index.html
@@ -10,7 +10,7 @@
                     <!--表格查询条件begin-->
                     <table class="layui-table table-border" lay-skin="line" lay-size="sm" style="margin-bottom: 15px">
                         <colgroup>
-                            <col class="yty_tdright" width="6%">
+                            <col class="yty_tdright" width="100px">
                             <col class="yty_tdright">
                         </colgroup>
                         <tbody>
@@ -168,25 +168,25 @@
         table.render({
             elem: '#rule'
 //            ,height: 500
-            ,url:"{:url('Admin/Order/index')}"
+//            ,url:"{:url('Admin/fields/index')}"
             ,id : 'tableReload'
             ,skin:'line'
-            ,height:400
+            ,limit:10
             ,defaultToolbar: ['filter']
             ,toolbar : '#toolbar'
-            ,width:1600
+            ,height:400
             ,cols: [[
                 {type:'checkbox', fixed: 'left'}
-                ,{field:'buyer_name', title: '买家昵称', sort: true}
-                ,{field:'consignee_name', title: '收货人姓名'}
-                ,{field:'order_status', title: '订单状态',templet: '#switchStatus', sort: true}
-                ,{field:'order_source', title: '订单来源', sort: true}
-                ,{field:'consignee_city', title: '收货人所在城市'}
-                ,{field:'mobile', title: '手机号码'}
-                ,{field:'order_number', title: '订单编号'}
-                ,{field:'pay_money', title: '付款金额（元）'}
-                ,{field:'order_time', title: '下单时间'}
-                ,{field:'commodity', title: '购买的宝贝'}
+                ,{field:'buyer_name', title: '买家昵称', sort: true,minWidth:150}
+                ,{field:'consignee_name', title: '收货人姓名',minWidth:150}
+                ,{field:'order_status', title: '订单状态',templet: '#switchStatus', sort: true,minWidth:100}
+                ,{field:'order_source', title: '订单来源', sort: true,minWidth:150}
+                ,{field:'consignee_city', title: '收货人所在城市',minWidth:150}
+                ,{field:'mobile', title: '手机号码',minWidth:100}
+                ,{field:'order_number', title: '订单编号',minWidth:150}
+                ,{field:'pay_money', title: '付款金额（元）',minWidth:100}
+                ,{field:'order_time', title: '下单时间',minWidth:100}
+                ,{field:'commodity', title: '购买的宝贝',minWidth:150}
             ]]
             ,page: {
                 layout: ['limit', 'count', 'prev', 'page', 'next', 'skip'] //自定义分页布局
