--- a/public/static/style/admin.css
+++ b/public/static/style/admin.css
@@ -2304,7 +2304,10 @@ tr>td.yty_tdright .layui-input, tr>td.yty_tdright .layui-select, tr>td.yty_tdrig
     background-color: #ababab;
 }
 
-
 .layui-form-checked span, .layui-form-checked:hover span {
     background-color: #506def;
+}
+
+li.checkbox-active{
+    border: 1px solid #506def !important;
 }
