--- a/application/admin/view/order/get_area_id.html
+++ b/application/admin/view/order/get_area_id.html
@@ -12,6 +12,15 @@
             </colgroup>
             <tbody>
             <tr>
+                <td class="tdleft"></td>
+                <td colspan="2" class="tdright">
+                    <div class="layui-form" lay-filter="check_all">
+                        <input type="radio" name="check_all" lay-filter="check_all" class="check_all" value="all" title="全选">
+                        <input type="radio" name="check_all" lay-filter="check_all" value="none" class="check_all_none" title="反选">
+                    </div>
+                </td>
+            </tr>
+            <tr>
                 <td class="tdleft">华东地区:</td>
                 <td class="tdright">
                     <div class="layui-form">
@@ -146,9 +155,10 @@
         '__STATIC__/style/jquery.validator.css?v={$msectime}'
     ).link(
         " __STATIC__/style/jquery.validator.css?v={$msectime}"
-    ).use(['jquery','index','laydate','formValidator'], function(){
+    ).use(['jquery','index','laydate','form','formValidator'], function(){
         var admin = layui.admin
             ,$ = layui.$
+            ,form = layui.form
             ,table = layui.table
             ,laydate = layui.laydate
             ,formValidator = layui.formValidator;
@@ -167,19 +177,37 @@
          */
         formValidator.api.bindevent($("form#formRule"));
 
+        /**
+         * 地区点击选中事件
+         */
         $("body").on("click",".layui-form-checkbox",function (){
             var p = $(this).prev();
             if(p.attr('class') == 'all' && p.attr('class') !== 'undefined') {
-                console.log(123456);
                 if($(this).hasClass('layui-form-checked')) {
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').prop('checked', true);
+                    $(this).parent(".layui-form").children('input').prop('checked', true);
                     $(this).parent(".layui-form").children('.layui-form-checkbox').addClass('layui-form-checked');
                 } else {
-                    $(this).parent(".layui-form").children('.layui-form-checkbox').prop('checked', false);
+                    $(this).parent(".layui-form").children('input').prop('checked', false);
                     $(this).parent(".layui-form").children('.layui-form-checkbox').removeClass('layui-form-checked');
                 }
             }
         });
+
+        /**
+         *全选、反选
+         */
+        form.on('radio(check_all)', function(data){
+            var value = data.value;
+            if(value == 'all') {
+                $("input[type=checkbox]").prop('checked', true);
+                $(".layui-form-checkbox").addClass('layui-form-checked');
+            } else {
+                $("input[type=checkbox]").prop('checked', false);
+                $(".layui-form-checkbox").removeClass('layui-form-checked');
+            }
+        });
+
+
     });
 </script>
 </body>
