评价状态、订单类型全选、非全选状态

--- a/application/admin/view/order/get_area_id.html
+++ b/application/admin/view/order/get_area_id.html
@@ -14,7 +14,7 @@
             <tr>
                 <td class="tdleft"></td>
                 <td colspan="2" class="tdright">
-                    <div class="layui-form" lay-filter="check_all">
+                    <div class="layui-form">
                         <input type="radio" name="check_all" lay-filter="check_all" class="check_all" value="all" title="全选">
                         <input type="radio" name="check_all" lay-filter="check_all" value="none" class="check_all_none" title="反选">
                     </div>
